sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:24: error: ';' expected but 'else' found.
           else{
           ^